[package]
name = "paperclick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
shutdown-handler = "0.1.1"
tokio = { version = "1.33.0", features = ["full"] }
